# Global-Stock-Analyser

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Global Stock Analyzer v2 - PRD.docx  Global-Stock-Analyser.command  INSTALL.md  INSTALL_AUDIT.md  Install-Browser-Mode.command  LICENSE  PERFORMANCE.md  README.md  RELEASING.md  SECURITY.md  Trust-Certificate.command  USER_GUIDE.md  Uninstall-Browser-Mode.command  analyzer.py  app.py  cli.py  market_data.py  markets.py  models.py  pyproject.toml  requirements.txt  resolver.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
audit/: pip-audit-v1.0.0.json  sbom-v0.23.0.txt  sbom-v1.2.0.txt
calc/: __init__.py  indicators.py  recommendation.py  scoring.py
data/: universe.csv  universe_global.csv
providers/: __init__.py  cache.py  events.py  fundamentals.py  historical.py  mock.py  news.py  symbol.py  universe.py
screener/: __init__.py  engine.py  presets.py
scripts/: audit_dependencies.sh  check_bundle_sizes.sh  check_version_sync.sh  com.equityscope.global.plist.template  equityscope.service.template  gen_cert.sh  install_daemon.sh  install_systemd.sh  run_secure.sh  setup_hosts.sh  uninstall_daemon.sh  uninstall_systemd.sh
static/: alerts.js  analysis.css  backup.js  consent.js  explainer.js  format.js  landing.css  portfolio.js  risk_profile.js  screener.css  style.css  ui.js  watchlist.js
templates/: _nav.html  alerts.html  compare.html  data_quality.html  events.html  index.html  landing.html  news.html  portfolio.html  privacy.html  risk_profile.html  screener.html  settings.html  sources.html  watchlists.html
tests/: test_alerts.py  test_analyze_v2.py  test_compliance.py  test_cross_validation.py  test_events_and_dq.py  test_explainer.py  test_indicators.py  test_news.py  test_polish.py  test_portfolio.py  test_recommendation.py  test_render_smoke.py  test_resolver_edges.py  test_roundtrip.py  test_scoring.py  test_screener_engine.py  test_settings.py  test_smoke.py  test_watchlists_api.py  test_wireup.py
