[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-stock-analyser"
version = "1.2.0"
description = "Free, no-API-key global equity research dashboard with value/momentum screening"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "EquityScope contributors" }]
keywords = ["stocks", "equity", "research", "finance", "screener", "momentum", "value"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask>=3.0,<4.0",
    "pandas>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "yfinance>=0.2.40",
    "waitress>=3.0,<4.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pip-audit", "build", "twine"]

[project.scripts]
equityscope = "cli:main"

[project.urls]
Homepage = "https://github.com/vikramraviprolu-code/Global-Stock-Analyser"
Issues = "https://github.com/vikramraviprolu-code/Global-Stock-Analyser/issues"
Changelog = "https://github.com/vikramraviprolu-code/Global-Stock-Analyser/blob/main/CHANGELOG.md"
Security = "https://github.com/vikramraviprolu-code/Global-Stock-Analyser/blob/main/SECURITY.md"

# ---- Setuptools (flat layout — top-level packages + py_modules) -------------

[tool.setuptools]
py-modules = [
    "app", "cli", "analyzer", "market_data", "markets", "models", "resolver",
]
packages = ["calc", "providers", "screener"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.csv", "*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico"]

# Top-level data dirs (not Python packages) shipped alongside the wheel via
# MANIFEST.in (sdist) + the explicit data_files block below (wheel). Flask
# discovers templates / static via app.root_path so paths must resolve
# relative to the installed app.py.

# ---- Tooling ----------------------------------------------------------------

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
